# GenerativeAI_LangChain

./: README.md  product_research_template.json  requirements.txt
LangChain_Demo/: pyproject.toml
LangChain_Demo/Components/Messages/: chat_history.txt  dynamic_messages.py  messages.py  messages_placeholder.py
LangChain_Demo/Components/Parsers/: OuputParser_without_parserclass.py  OutputParser_with_class.py  StrOuputParser.py
LangChain_Demo/Components/Runnables/: langchain_runnables_guide.md
LangChain_Demo/Components/StructuredOutput/: langchain_Style_json_schema.json  pydantic_demo.py  typedDict.py  with_structure_output_json.py  with_structured_output_pydantic.py  with_structured_output_typed.py
LangChain_Demo/Components/Tools/: duckduckgo_searchTool.py  langchain_tools_tool_calling_guide.md  shellTool.py
LangChain_Demo/Components/chains/: Sequential_Chain.py  conditional_chain.py  parallel_chain.py  simple_chain.py
LangChain_Demo/Demo_Project/ChatBot/: ChatBot_AI.py
LangChain_Demo/Demo_Project/Document_Similarity/: DocSim.py
LangChain_Demo/Demo_Project/Product_Research_Tool/: App.py  prompt_template.py
LangChain_Demo/Demo_Project/Wikipedia/: wikipedia_search_agent.py  workflow.md
LangChain_Demo/Demo_Project/Youtube/: main.py  project_overview.md
LangChain_Demo/RAG_Components/: advik.txt
LangChain_Demo/RAG_Components/DocumentLoaders/: csv_loader.py  directoryloader.py  py_pdf_loader.py  text_loader.py  web_base_loader.py
LangChain_Demo/RAG_Components/Retrivers/: MMR_Maximal_Marginal_Retriever.py  contextual_compression_retriever.py  (+3 more)
(+34 files in other folders)
